2006-05-17  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	typo error

2006-05-16  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/exportsettingswidget.py:
	Put button in proper orders (Cancel then OK)

2006-05-16  Edward Hervey  <edward@fluendo.com>

	* pitivi/bin.py:
	Fixed recording for tee -> identity conversion/hack.
	We remove audio/video sink when encoding and put them back when finished.
	* pitivi/playground.py:
	added debug for position signal emission.
	* pitivi/ui/complextimeline.py:
	don't send a negative frame value to toplayer's timelinePositionChanged
	* pitivi/ui/encodingdialog.glade:
	Better order for buttons.
	Cancel button becomes close button.
	* pitivi/ui/viewer.py:
	Grey-out (set_sensitive()) the main window when the encoding dialog is showing.
	Lots of fixes with the EncodingDialog:
	_ Close button becomes cancel when encoding
	_ Show Time Left in progressbar
	_ Use playground's 'position' signal

2006-05-16  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/viewer.py:
	removed print statement

2006-05-16  Edward Hervey  <edward@fluendo.com>

	* pitivi/playground.py:
	Added 'position' signal which is emitted to inform a change of position
	with the current SmartBin.
	* pitivi/ui/complextimeline.py:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/viewer.py:
	Switch to use playground's 'position' signal in Viewer and
	ComplexTimeline.

	This should fix several issues:
	_ Position checking not being in ui-independent part,
	_ Position updating not starting,
	_ Position checking done during critical parts (state change).

2006-05-16  Edward Hervey  <edward@fluendo.com>

	* pitivi/configure.py.in:
	Add APPNAME, which contains the configured application name.
	This will easily allow changing the application name later on.
	* pitivi/check.py:
	* pitivi/pitivi.py:
	* pitivi/project.py:
	* pitivi/ui/mainwindow.py:
	Use configure.APPNAME for every string occurence of PiTiVi.
	(PitiviMainWindow._setActions): 